Added missing product.html file and fixed a type

--- a/product.html
+++ b/product.html
@@ -44,32 +44,39 @@
     </header>
     <!-- END OF HEADER -->
     <div class="content-divider"></div>
-    <!-- ABOUT -->
-    <section class="about">
+    <!-- PRODUCT -->
+    <section class="product">
       <div class="section-centre clearfix">
-        <article class="about-img">
-          <div class="about-picture">
-            <img src="./Images/about-bcg.jpeg" alt="About Pic" id="about-pic" />
-          </div>
+        <article class="product-info">
+          <h3 class="section-subtitle">check out</h3>
+          <h1 class="section-title">our products</h1>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+            officiis fugit sed soluta tempora? Provident velit est voluptas
+            voluptate qui magnam sed, iste ratione vel!
+          </p>
+          <a href="./product.html" class="button">inventory</a>
         </article>
-        <article class="about-info">
-          <h3 class="section-subtitle">about our</h3>
-          <h1 class="section-title">tea station</h1>
-          <p class="section-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-            facere cupiditate fugiat eaque sit magni exercitationem vel harum,
-            nam fugit?
-          </p>
-          <p class="section-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-            dolores sapiente sunt! Rerum reiciendis itaque dolorem commodi
-            officiis inventore voluptates!
-          </p>
-          <a href="./about.html" class="button">learn more</a>
+        <article class="products clearfix">
+          <div class="single-product">
+            <img src="./Images/product-1.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
+          <div class="single-product">
+            <img src="./Images/product-2.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
+          <div class="single-product">
+            <img src="./Images/product-3.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
         </article>
       </div>
     </section>
-    <!-- END OF ABOUT -->
+    <!-- END OF PRODUCT -->
     <!-- FOOTER -->
     <footer class="footer">
       <div class="section-centre clearfix">
