--- a/index.html
+++ b/index.html
@@ -1,229 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea Staion - Home</title>
 
     <!-- Links -->
-    <link rel="stylesheet" type="text/css" href="./Styles/style.css">
-    <script src="https://kit.fontawesome.com/e21c398f26.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="./Styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/e21c398f26.js"
+      crossorigin="anonymous"
+    ></script>
     <!--End of Links -->
-</head>
-<body>
+  </head>
+  <body>
     <!-- NAV BUTTON -->
     <span id="nav-icon">
-        <i class="fas fa-bars"></i>
+      <i class="fas fa-bars"></i>
     </span>
     <!-- NAVBAR -->
     <nav class="navbar" id="navbar">
-        <span id="nav-close">
-            <i class="fas fa-times"></i>
-        </span>
-        <ul class="nav-items">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./explore.html">skills</a></li>
-            <li><a href="./product.html">products</a></li>
-            <li><a href="./about.html">about us</a></li>
-            <li><a href="./contact.html">Contact us</a></li>
-        </ul>
+      <span id="nav-close">
+        <i class="fas fa-times"></i>
+      </span>
+      <ul class="nav-items">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./explore.html">skills</a></li>
+        <li><a href="./product.html">products</a></li>
+        <li><a href="./about.html">about us</a></li>
+        <li><a href="./contact.html">Contact us</a></li>
+      </ul>
     </nav>
     <script src="./nav.js"></script>
     <!-- END OF NAVBAR -->
     <!-- HEADER -->
     <header class="header">
-        <div class="banner">
-            <h3 class="banner-subtitle">Over one hundred flavours of Tea</h3>
-            <h1 class="banner-title">specially crafted tea</h1>
-            <a href="./explore.html" class="headerBtn button">explore</a>
-        </div>
+      <div class="banner">
+        <h3 class="banner-subtitle">Over one hundred flavours of Tea</h3>
+        <h1 class="banner-title">specially crafted tea</h1>
+        <a href="./explore.html" class="headerBtn button">explore</a>
+      </div>
     </header>
     <!-- END OF HEADER -->
     <div class="content-divider"></div>
     <!-- SKILLSET -->
     <section class="skillset clearfix">
-        <!-- SKILL# 1 -->
-        <article class="single-skill">
-            <span class="skill-icon">
-                <i class="fas fa-mug-hot"></i>
-            </span>
-            <h3 class="skill-heading">made in us</h3>
-            <p class="skill-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, veritatis?</p>
-        </article>
-        <!-- SKILL# 2 -->
-        <article class="single-skill">
-            <span class="skill-icon">
-                <i class="fas fa-glass-cheers"></i>
-            </span>
-            <h3 class="skill-heading">relaxation</h3>
-            <p class="skill-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, veritatis?</p>
-        </article>
-        <!-- SKILL# 3 -->
-        <article class="single-skill">
-            <span class="skill-icon">
-                <i class="fas fa-bomb"></i>
-            </span>
-            <h3 class="skill-heading">energy</h3>
-            <p class="skill-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, veritatis?</p>
-        </article>
-        <!-- SKILL# 4 -->
-        <article class="single-skill">
-            <span class="skill-icon">
-                <i class="fas fa-mortar-pestle"></i>
-            </span>
-            <h3 class="skill-heading">family recipe</h3>
-            <p class="skill-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, veritatis?</p>
-        </article>
+      <!-- SKILL# 1 -->
+      <article class="single-skill">
+        <span class="skill-icon">
+          <i class="fas fa-mug-hot"></i>
+        </span>
+        <h3 class="skill-heading">made in us</h3>
+        <p class="skill-p">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur,
+          veritatis?
+        </p>
+      </article>
+      <!-- SKILL# 2 -->
+      <article class="single-skill">
+        <span class="skill-icon">
+          <i class="fas fa-glass-cheers"></i>
+        </span>
+        <h3 class="skill-heading">relaxation</h3>
+        <p class="skill-p">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur,
+          veritatis?
+        </p>
+      </article>
+      <!-- SKILL# 3 -->
+      <article class="single-skill">
+        <span class="skill-icon">
+          <i class="fas fa-bomb"></i>
+        </span>
+        <h3 class="skill-heading">energy</h3>
+        <p class="skill-p">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur,
+          veritatis?
+        </p>
+      </article>
+      <!-- SKILL# 4 -->
+      <article class="single-skill">
+        <span class="skill-icon">
+          <i class="fas fa-mortar-pestle"></i>
+        </span>
+        <h3 class="skill-heading">family recipe</h3>
+        <p class="skill-p">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur,
+          veritatis?
+        </p>
+      </article>
     </section>
     <!-- ABOUT -->
     <section class="about">
-        <div class="section-centre clearfix">
-            <article class="about-img">
-                <div class="about-picture">
-                    <img
-                    src="./Images/about-bcg.jpeg" 
-                    alt="About Pic" 
-                    id="about-pic"
-                    >
-                </div>
-            </article>
-            <article class="about-info">
-                <h3 class="section-subtitle">about our</h3>
-                <h1 class="section-title">tea station</h1>
-                <p class="section-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore facere cupiditate fugiat eaque sit magni exercitationem vel harum, nam fugit?
-                </p>
-                <p class="section-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores sapiente sunt! Rerum reiciendis itaque dolorem commodi officiis inventore voluptates!
-                </p>
-                <a href="./about.html" class="button">learn more</a>
-            </article>
-        </div>
+      <div class="section-centre clearfix">
+        <article class="about-img">
+          <div class="about-picture">
+            <img src="./Images/about-bcg.jpeg" alt="About Pic" id="about-pic" />
+          </div>
+        </article>
+        <article class="about-info">
+          <h3 class="section-subtitle">about our</h3>
+          <h1 class="section-title">tea station</h1>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
+            facere cupiditate fugiat eaque sit magni exercitationem vel harum,
+            nam fugit?
+          </p>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            dolores sapiente sunt! Rerum reiciendis itaque dolorem commodi
+            officiis inventore voluptates!
+          </p>
+          <a href="./about.html" class="button">learn more</a>
+        </article>
+      </div>
     </section>
     <!-- END OF ABOUT -->
     <!-- PRODUCT -->
     <section class="product">
-        <div class="section-centre clearfix">
-            <article class="product-info">
-                <h3 class="section-subtitle">check out</h3>
-                <h1 class="section-title">our products</h1>
-                <p class="section-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officiis fugit sed soluta tempora? Provident velit est voluptas voluptate qui magnam sed, iste ratione vel!
-                </p>
-                <a href="./product.html" class="button">inventory</a>
-            </article>
-            <article class="products clearfix">
-                <div class="single-product">
-                    <img src="./Images/product-1.jpeg" alt="" class="product-img"></img>
-                    <h3 class="product-title">product title</h3>
-                    <h3 class="product-price">$ 6.99</h3>
-                </div>
-                <div class="single-product">
-                    <img src="./Images/product-2.jpeg" alt="" class="product-img"></img>
-                    <h3 class="product-title">product title</h3>
-                    <h3 class="product-price">$ 6.99</h3>
-                </div>
-                <div class="single-product">
-                    <img src="./Images/product-3.jpeg" alt="" class="product-img"></img>
-                    <h3 class="product-title">product title</h3>
-                    <h3 class="product-price">$ 6.99</h3>
-                </div>
-            </article>
-        </div>
+      <div class="section-centre clearfix">
+        <article class="product-info">
+          <h3 class="section-subtitle">check out</h3>
+          <h1 class="section-title">our products</h1>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+            officiis fugit sed soluta tempora? Provident velit est voluptas
+            voluptate qui magnam sed, iste ratione vel!
+          </p>
+          <a href="./product.html" class="button">inventory</a>
+        </article>
+        <article class="products clearfix">
+          <div class="single-product">
+            <img src="./Images/product-1.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
+          <div class="single-product">
+            <img src="./Images/product-2.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
+          <div class="single-product">
+            <img src="./Images/product-3.jpeg" alt="" class="product-img" />
+            <h3 class="product-title">product title</h3>
+            <h3 class="product-price">$ 6.99</h3>
+          </div>
+        </article>
+      </div>
     </section>
     <!-- END OF PRODUCT -->
     <!-- CONTACT -->
     <section class="contact">
-        <div class="section-centre clearfix">
-            <!-- CONTACT INFO -->
-            <article class="contact-info">
-                <div class="single-info">
-                    <h3 class="section-subtitle contact-title">
-                        <span class="contact-icon">
-                        <i class="fas fa-location-arrow"></i>
-                    </span>address
-                    </h3>
-                    <h3 class="contact-text section-subtitle">
-                        <address>523 N Fairfax Ave, Los Angeles, CA 90048</address>
-                    </h3>
-                </div>
-                <div class="single-info">
-                    <h3 class="section-subtitle contact-title">
-                        <span class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </span>email
-                    </h3>
-                    <h3 class="contact-text section-subtitle">
-                        <a href="mailto:email@email.com">email@email.com</a>
-                    </h3>
-                </div>
-                <div class="single-info">
-                    <h3 class="section-subtitle contact-title">
-                        <span class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </span>phone
-                    </h3>
-                    <h3 class="contact-text section-subtitle">
-                        <a href="tel:+ 923 456 789">+ 923 456 789</a>
-                    </h3>
-                </div>
-            </article>
-            <!-- END OF CONTACT INFO -->
-            <!-- CONTACT FORM -->
-            <article class="contact-form">
-                <form action="https://formspree.io/f/xknknnzz" method="post" class="form">
-                    <div class="form-entry">
-                        <label for="Name" class="label-form">Name</label>
-                        <br>
-                        <input type="text" name="Name" id="Name" class="form-input" required>
-                    </div>
-                    <div class="form-entry">
-                        <label for="email" class="label-form">Email</label>
-                        <br>
-                        <input type="email" name="email" id="email" class="form-input" required>
-                    </div>
-                    <div class="form-entry">
-                        <label for="comments" class="label-form">Comments</label>
-                        <br>
-                        <textarea name="comments" id="comments" rows="5" class="form-input"></textarea>
-                    </div>
-                    <input type="hidden" name="_subject" value="Tea Station: New submission!" />
-                    <button type="submit" class="button submit-button">SEND</button>
-                    <button type="reset" class="button submit-button">Clear</button>
-                </form>
-            </article>
-            <!-- END OF CONTACT FORM -->
-        </div>
+      <div class="section-centre clearfix">
+        <!-- CONTACT INFO -->
+        <article class="contact-info">
+          <div class="single-info">
+            <h3 class="section-subtitle contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-location-arrow"></i> </span
+              >address
+            </h3>
+            <h3 class="contact-text section-subtitle">
+              <address>523 N Fairfax Ave, Los Angeles, CA 90048</address>
+            </h3>
+          </div>
+          <div class="single-info">
+            <h3 class="section-subtitle contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-envelope"></i> </span
+              >email
+            </h3>
+            <h3 class="contact-text section-subtitle">
+              <a href="mailto:email@email.com">email@email.com</a>
+            </h3>
+          </div>
+          <div class="single-info">
+            <h3 class="section-subtitle contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-phone"></i> </span
+              >phone
+            </h3>
+            <h3 class="contact-text section-subtitle">
+              <a href="tel:+ 923 456 789">+ 923 456 789</a>
+            </h3>
+          </div>
+        </article>
+        <!-- END OF CONTACT INFO -->
+        <!-- CONTACT FORM -->
+        <article class="contact-form">
+          <form
+            action="https://formspree.io/f/xknknnzz"
+            method="post"
+            class="form"
+          >
+            <div class="form-entry">
+              <label for="Name" class="label-form">Name</label>
+              <br />
+              <input
+                type="text"
+                name="Name"
+                id="Name"
+                class="form-input"
+                required
+              />
+            </div>
+            <div class="form-entry">
+              <label for="email" class="label-form">Email</label>
+              <br />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="form-input"
+                required
+              />
+            </div>
+            <div class="form-entry">
+              <label for="comments" class="label-form">Comments</label>
+              <br />
+              <textarea
+                name="comments"
+                id="comments"
+                rows="5"
+                class="form-input"
+              ></textarea>
+            </div>
+            <input
+              type="hidden"
+              name="_subject"
+              value="Tea Station: New submission!"
+            />
+            <button type="submit" class="button submit-button">SEND</button>
+            <button type="reset" class="button submit-button">Clear</button>
+          </form>
+        </article>
+        <!-- END OF CONTACT FORM -->
+      </div>
     </section>
     <!-- END OF CONTACT -->
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="section-centre clearfix">
-            <article class="social-links">
-                <a href="https://www.facebook.com/" target="_blank" class="link">
-                    <span class="link-icon">
-                        <i class="fab fa-facebook "></i>
-                    </span>
-                </a>
-                <a href="https://www.twitter.com/" target="_blank" class="link">
-                    <span class="link-icon">
-                        <i class="fab fa-twitter "></i>
-                    </span>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank" class="link">
-                    <span class="link-icon">
-                        <i class="fab fa-instagram "></i>
-                    </span>
-                </a>
-            </article>
-            <article class="footer-text">
-                <p class="footer-p">
-                    &copy;2021  <span class="company-name">tea station</span>.  all rights reserved
-                </p>
-            </article>
-        </div>
+      <div class="section-centre clearfix">
+        <article class="social-links">
+          <a href="https://www.facebook.com/" target="_blank" class="link">
+            <span class="link-icon">
+              <i class="fab fa-facebook"></i>
+            </span>
+          </a>
+          <a href="https://www.twitter.com/" target="_blank" class="link">
+            <span class="link-icon">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" class="link">
+            <span class="link-icon">
+              <i class="fab fa-instagram"></i>
+            </span>
+          </a>
+        </article>
+        <article class="footer-text">
+          <p class="footer-p">
+            &copy;2021 <span class="company-name">tea station</span>. all rights
+            reserved
+          </p>
+        </article>
+      </div>
     </footer>
     <!-- END OF FOOTER -->
-</body>
+  </body>
 </html>
